fix for tooltips z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -819,10 +819,7 @@ a:hover i{
     border-width: 10px;
     margin-left: -10px;
 }
-/* Bootstrap tooltips */
-.tooltip{
-  z-index: 20000;
-}
+
 
 /* Handle stripes;
  */
